--- a/frontend/src/app/components/categories/category-form-modal.component.html
+++ b/frontend/src/app/components/categories/category-form-modal.component.html
@@ -223,7 +223,7 @@
 
         <!-- Form Actions -->
         <div class="form-actions-row">
-          <button type="submit" class="save-btn" [disabled]="categoryForm.invalid">{{ isEdit ? 'Save' : 'Create Category' }}</button>
+          <button type="submit" class="save-btn" [disabled]="categoryForm.invalid">{{ isEdit ? 'Save' : 'Create' }}</button>
           <button type="button" class="cancel-btn" (click)="onCancel()">Cancel</button>
         </div>
       </div>
