--- a/frontend/src/app/components/categories/category-admin.component.html
+++ b/frontend/src/app/components/categories/category-admin.component.html
@@ -8,8 +8,7 @@
           <input 
             type="text" 
             placeholder="Search categories..." 
-            [(ngModel)]="searchText" 
-            (input)="applyFilter()"
+            [formControl]="searchControl"
             class="search-input"
           >
         </div>
@@ -23,7 +22,7 @@
 
   <div class="admin-content">
     <div class="table-container">
-      <table mat-table [dataSource]="dataSource" class="modern-table">
+      <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSortChange()" class="modern-table">
         <!-- Selection Column -->
         <ng-container matColumnDef="select">
           <th mat-header-cell *matHeaderCellDef>
@@ -55,18 +54,18 @@
 
         <!-- Name Column -->
         <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header="name">Name</th>
           <td mat-cell *matCellDef="let category">
             <div class="category-name">
               <span class="name">{{ category.name }}</span>
-              <span class="slug" *ngIf="category.slug">{{ category.slug }}</span>
+              <!-- <span class="slug" *ngIf="category.slug">{{ category.slug }}</span> -->
             </div>
           </td>
         </ng-container>
 
         <!-- Created Date Column -->
         <ng-container matColumnDef="createdAt">
-          <th mat-header-cell *matHeaderCellDef>Created</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header="createdAt">Created</th>
           <td mat-cell *matCellDef="let category">
             <span class="date">{{ category.createdAt | date:'short' }}</span>
           </td>
@@ -77,7 +76,7 @@
           <th mat-header-cell *matHeaderCellDef>Actions</th>
           <td mat-cell *matCellDef="let category">
             <div class="action-buttons">
-              <button mat-icon-button color="primary" (click)="editCategory(category); $event.stopPropagation()" title="Edit">
+              <button class="edit_btn" mat-icon-button color="white" (click)="editCategory(category); $event.stopPropagation()" title="Edit">
                 <mat-icon>edit</mat-icon>
               </button>
               <button mat-icon-button color="warn" (click)="deleteCategory(category); $event.stopPropagation()" title="Delete">
@@ -90,6 +89,16 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="editCategory(row)"></tr>
       </table>
+
+      <div class="paginator-container">
+        <mat-paginator 
+          [length]="totalItems"
+          [pageSize]="pageSize"
+          [pageSizeOptions]="pageSizeOptions"
+          (page)="onPageChange($event)"
+          showFirstLastButtons>
+        </mat-paginator>
+      </div>
     </div>
 
     <!-- Bulk Actions -->
