--- a/frontend/src/app/components/categories/category-admin.component.scss
+++ b/frontend/src/app/components/categories/category-admin.component.scss
@@ -105,6 +105,17 @@
 
         tr:hover {
           background: #f8f9fa;
+
+          .date {
+              color: #080808;
+          }
+
+          .edit_btn {
+            color:#080808;
+          }
+          .name{
+            color: #080808;
+          }
         }
 
         .category-image {
@@ -135,15 +146,12 @@
         .category-name {
           .name {
             font-weight: 600;
-            color: #2c3e50;
+            color: #d1ed15;
             display: block;
             margin-bottom: 0.25rem;
           }
 
-          .slug {
-            font-size: 0.85rem;
-            color: #666;
-          }
+   
         }
 
         .parent-category {
@@ -171,8 +179,10 @@
         }
 
         .date {
-          font-size: 0.9rem;
-          color: #666;
+          font-size: 0.8rem;
+          color: #faf6f6;
+          font-weight: 500;
+
         }
 
         .action-buttons {
@@ -296,6 +306,31 @@
       }
     }
   }
+}
+
+.paginator-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 16px 0 0 0;
+  background: #232323;
+  border-radius: 0 0 16px 16px;
+  margin-top: -8px;
+}
+
+::ng-deep mat-paginator {
+  background: transparent !important;
+  color: #fff !important;
+  font-size: 1rem;
+}
+
+::ng-deep .mat-paginator-range-label,
+::ng-deep .mat-paginator-page-size-label {
+  color: #fff !important;
+}
+
+::ng-deep .mat-paginator-icon {
+  color: #fff !important;
 }
 
 // Mobile responsiveness
