--- a/frontend/src/app/components/products/product-admin.component.html
+++ b/frontend/src/app/components/products/product-admin.component.html
@@ -17,8 +17,7 @@
         <input 
           type="text" 
           placeholder="Search in product..." 
-          [(ngModel)]="searchText" 
-          (input)="applyFilter()"
+          [formControl]="searchControl"
           class="search-input"
         >
       </div>
@@ -34,7 +33,7 @@
 
   <!-- Products Table -->
   <div class="data-table-container">
-    <table mat-table [dataSource]="dataSource" class="products-table">
+    <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSortChange()" class="products-table">
       <!-- Select Column -->
       <ng-container matColumnDef="select">
         <th mat-header-cell *matHeaderCellDef class="select-header">
@@ -55,7 +54,7 @@
 
       <!-- Product Column -->
       <ng-container matColumnDef="product">
-        <th mat-header-cell *matHeaderCellDef class="product-header">Product</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="name" class="product-header">Product</th>
         <td mat-cell *matCellDef="let product" class="product-cell">
           <div class="product-info">
             <img 
@@ -67,7 +66,6 @@
             >
             <div class="product-details">
               <div class="product-name">{{ product.name }}</div>
-              <div class="product-code">Code: {{ product.productCode || 'N/A' }}</div>
             </div>
           </div>
         </td>
@@ -83,7 +81,7 @@
 
       <!-- Stock Column -->
       <ng-container matColumnDef="stock">
-        <th mat-header-cell *matHeaderCellDef class="stock-header">Stock</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="stockQuantity" class="stock-header">Stock</th>
         <td mat-cell *matCellDef="let product" class="stock-cell">
           <span class="stock-value">{{ product.stockQuantity || 0 }}</span>
         </td>
@@ -91,7 +89,7 @@
 
       <!-- Price Column -->
       <ng-container matColumnDef="price">
-        <th mat-header-cell *matHeaderCellDef class="price-header">Price</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="price" class="price-header">Price</th>
         <td mat-cell *matCellDef="let product" class="price-cell">
           <span class="price-value">${{ product.price | number:'1.2-2' }}</span>
         </td>
@@ -122,11 +120,15 @@
     </table>
 
     <!-- Pagination -->
-    <mat-paginator 
-      [pageSizeOptions]="[10, 20, 50]" 
-      [pageSize]="10" 
-      showFirstLastButtons
-      class="table-paginator">
-    </mat-paginator>
+    <div class="paginator-container">
+      <mat-paginator 
+        [length]="totalItems"
+        [pageSize]="pageSize"
+        [pageSizeOptions]="pageSizeOptions"
+        (page)="onPageChange($event)"
+        showFirstLastButtons
+        class="table-paginator">
+      </mat-paginator>
+    </div>
   </div>
 </div> 
